--- a/src/main/res/values/appirater-settings.xml
+++ b/src/main/res/values/appirater-settings.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Change the market_url for other markets i.e. Amazon App Store
-    	Google Play = market://details?id=%s
-    	Amazon App Store = http://www.amazon.com/gp/mas/dl/android?p=%s
+    <!--
+     * Change the appirator_market_url for other markets i.e. Amazon App Store
+         - Google Play = market://details?id=%s
+         - Amazon App Store = http://www.amazon.com/gp/mas/dl/android?p=%s
+
+     * Override appirator_app_title as the name of your app.
      -->
-    <string name="appirator_app_title">Your App Name</string>
+    <string name="appirator_app_title" translatable="false">Your App Name</string>
     <string name="appirator_market_url" translatable="false">market://details?id=%s</string>
     <integer name="appirator_days_until_prompt">30</integer>
     <integer name="appirator_launches_until_prompt">15</integer>
