--- a/src/main/res/values/appirater-settings.xml
+++ b/src/main/res/values/appirater-settings.xml
@@ -1,26 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--
-     * Change the appirator_market_url for other markets i.e. Amazon App Store
+     * Change the appirater_market_url for other markets i.e. Amazon App Store
          - Google Play = market://details?id=%s
          - Amazon App Store = http://www.amazon.com/gp/mas/dl/android?p=%s
 
-     * Override appirator_app_title as the name of your app.
+     * Override appirater_app_title as the name of your app.
      -->
-    <string name="appirator_app_title" translatable="false">Your App Name</string>
-    <string name="appirator_market_url" translatable="false">market://details?id=%s</string>
-    <integer name="appirator_days_until_prompt">30</integer>
-    <integer name="appirator_launches_until_prompt">15</integer>
-    <integer name="appirator_untimed_events_until_prompt">15</integer>
-    <integer name="appirator_timed_events_until_prompt">15</integer>
+    <string name="appirater_app_title" translatable="false">Your App Name</string>
+    <string name="appirater_market_url" translatable="false">market://details?id=%s</string>
+    <integer name="appirater_days_until_prompt">30</integer>
+    <integer name="appirater_launches_until_prompt">15</integer>
+    <integer name="appirater_untimed_events_until_prompt">15</integer>
+    <integer name="appirater_timed_events_until_prompt">15</integer>
     <!-- Set this to 0 to remind every launch -->
-    <integer name="appirator_days_before_reminding">3</integer>
+    <integer name="appirater_days_before_reminding">3</integer>
     <!-- Change to true to show every time, for testing -->
-    <bool name="appirator_test_mode">false</bool>
-    <!-- Change modify button colors -->
-    <color name="appirator_button_start_color">#ff449def</color>
-    <color name="appirator_button_end_color">#ff2f6699</color>
-    <color name="appirator_button_text_color">#ffffffff</color>
-    <!-- Change title color -->
-    <color name="appirator_title_color">#ff449def</color>
+    <bool name="appirater_test_mode">false</bool>
 </resources>
