--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-    <style name="appiratorButton" parent="android:Widget.Button">
-        <item name="android:background">@drawable/button_appirator</item>
-        <item name="android:textColor">@color/appirator_button_text_color</item>
+
+    <!-- Appirater rate activity dialog theme. -->
+    <style name="AppiraterDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
+    <!-- Rate button style -->
+    <style name="AppiraterButton" parent="android:Widget.Button">
+        <item name="android:background">@drawable/button_appirater</item>
+        <item name="android:textColor">@color/appirater_button_text_color</item>
     </style>
 </resources>
